@@ -236,8 +236,9 @@ Thanks to Christian Johansson for suggestions!
 
  * forth: made +loop work according to standard
  * forth: made "type" disable c64 quote mode (fixes "words")
- * forth: removed hide, hide-to, hidden, forget, within
+ * forth: removed hide, hide-to, hidden, forget, within, scratch
  * forth: state ( -- flag ) changed to state ( -- addr )
  * forth: added count, >body
  * forth: fixed yet another tail call elimination crash
  * forth: made while/repeat implementation conform to standard
+ * forth: made word conform to standard
